tests/variable/use_local_in_initializer.lox
var a = "outer";
{
  // error
  var a = a;
}
